[package]
name = "bevy_blueprints_macros"
description = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
macros = []

[lib]
path = "../src/lib.rs"
required-features = ["macros"]

[dependencies]
cfg-if = "1.0.0"